Added endpoint and stub views for admins to view a single club
